--- a/Arts_Escèniques.tex
+++ b/Arts_Escèniques.tex
@@ -736,6 +736,6 @@ ves en cuidaoooo no se si aço trancara o continua fins el mas alla :::\\
 
 \end{rmdinfo}
 
-  \bibliography{book.bib}
+  \bibliography{book.bib,packages.bib}
 
 \end{document}
