--- a/Arts_Escèniques.tex
+++ b/Arts_Escèniques.tex
@@ -398,9 +398,9 @@ Uns repetidors de wifi, he quedat en un amic que controla del tema per a mirar-h
 \hypertarget{potuxe8ncia-de-la-connexiuxf3-dinternet-per-donar-servei}{%
 \subsection{Potència de la connexió d'internet per donar servei}\label{potuxe8ncia-de-la-connexiuxf3-dinternet-per-donar-servei}}
 
-Es requereix que l'amplada de banda de la connexió d'internet puga donar servei al meins a 92 espectadors, que es l'afore del pati de butaques.
+Es requereix que l'amplada de banda de la connexió d'internet puga donar servei almenys a 92 espectadors, que es l'afore del pati de butaques.
 
-S'ha de limitar l'amplada de banda que oferim als espectadors en cas de realitzar el streaming al mateix temps, açò ho realitzem assegurant l´amplada de banda en la xarxa del circuit d'imatge. en el switch.
+S'ha de limitar l'amplada de banda que oferim als espectadors en cas de realitzar el streaming al mateix temps, açò ho realitzem assegurant l'amplada de banda en la xarxa del circuit d'imatge. En el switch.
 
 \hypertarget{localitzaciuxf3-dels-dispositius-de-retransmissiuxf3}{%
 \subsection{localització dels dispositius de retransmissió}\label{localitzaciuxf3-dels-dispositius-de-retransmissiuxf3}}
@@ -423,7 +423,7 @@ Explorar la forma d'integrar el concepte git en les arts escèniques. Explorar e
 \begin{itemize}
 \tightlist
 \item
-  Es pot realitzar mitjançant la creació d'un compte en una de les plataformes git que hi ha en internet,
+  Es pot realitzar mitjançant la creació d'un compte en una de les plataformes Git que hi ha en internet,
 \item
   Configurant un servidor git en el mateix centre de treball
 
@@ -432,7 +432,7 @@ Explorar la forma d'integrar el concepte git en les arts escèniques. Explorar e
   \item
     Git i un servidor web, aquesta opció es per a gastar l'entorn git en consola, no es recomana per a l'empresa.
   \item
-    Un entorn web , he fet proves en gitlab i gitea, i el final crec que la millor opció és la de gitea pel reduït gaste de recursos que fa i la facilitat d'us.
+    Un entorn web, he fet proves en GitLab i Gitea, i el final crec que la millor opció és la de Gitea pel reduït gaste de recursos que fa i la facilitat d'ús.
   \item
     Es pot mirar d'enllaçar el repositori git en el conte de drive que té l'empresa, per fer un repositori privat per als membres.
   \end{itemize}
@@ -441,7 +441,7 @@ Explorar la forma d'integrar el concepte git en les arts escèniques. Explorar e
 \hypertarget{beneficis-de-la-seua-implantaciuxf3}{%
 \section{Beneficis de la seua implantació}\label{beneficis-de-la-seua-implantaciuxf3}}
 
-Els beneficis són els mateixos que per a la creació de projectes informàtics, pero que son poc utilitzat en el món de les lletres. \emph{Possibilitat de crear obres col·laboratives.}
+Els beneficis són els mateixos que per a la creació de projectes informàtics, però que son poc utilitzat en el món de les lletres. \emph{Possibilitat de crear obres col·laboratives.}
 
 \begin{itemize}
 \tightlist
@@ -466,7 +466,7 @@ Procés d'instal·lació d'un repositori de git
 \item
   Git i Apache \texttt{buscar\ la\ fulla\ on\ ho\ explica}
 \item
-  Instal·lació de \href{https://docs.gitea.io/en-us/}{gitea} , o bé directament, o per una imatge docker
+  Instal·lació de \href{https://docs.gitea.io/en-us/}{gitea} , o bé directament, o per una imatge Docker
 \item
   Servir el \href{https://www.permikkelsen.dk/how-to-host-your-git-repository-on-onedrive.html}{git} en un espai onedrive, pareix que és per consola, mirar algun client de git desktop que facilita les coses.
 \end{itemize}
@@ -474,10 +474,16 @@ Procés d'instal·lació d'un repositori de git
 \hypertarget{possible-implantaciuxf3-en-el-repositori-en-internet}{%
 \section{Possible implantació en el repositori en internet}\label{possible-implantaciuxf3-en-el-repositori-en-internet}}
 
-El més fàcil seria el traure un comptem en una de les plataformes que hi ha en internet, el problema es el recel que tinga l'empresa pel tema de privacitat. Aquestes plataformes tenen l'opció de crear repositoris privats, on soles es pot connectar al que convideu.
+El més fàcil seria traure un compte en una de les plataformes que hi ha en internet, el problema és el recel que tinga l'empresa pel tema de privacitat. Aquestes plataformes tenen l'opció de crear repositoris privats, on soles es pot connectar al que convideu.
+
+\hypertarget{explorar-obsidian}{%
+\section{\texorpdfstring{Explorar \href{https://obsidian.md/}{Obsidian}}{Explorar Obsidian}}\label{explorar-obsidian}}
+
+Obsidian és un editor de notes en funcions de seguiment git, per veure diff i altres funcions. Prou interessant, o com a alternativa \href{https://www.zettlr.com/}{Zettlr}, dona error en posar diccionaris.\\
+I implantació d'un servidor de \href{https://github.com/Erikvl87/docker-languagetool}{Languagetool}
 
 \hypertarget{explorar-wikimedia-per-a-la-realitzaciuxf3-descriptura-collaborativa}{%
-\section{Explorar wikimedia per a la realització d'escriptura col·laborativa}\label{explorar-wikimedia-per-a-la-realitzaciuxf3-descriptura-collaborativa}}
+\section{Explorar Wikimedia per a la realització d'escriptura col·laborativa}\label{explorar-wikimedia-per-a-la-realitzaciuxf3-descriptura-collaborativa}}
 
 L'escriptura col·laborativa mitjançant ferramentes de xarxa, com la Wikipedia, on és possible discutir els convits proposats, obrir discussions sobre el text analitzat. Es pot explorar el concepte de \href{https://es.wikipedia.org/wiki/Narrativa_hipertextual}{Narrativa hipertextual} fent servir aquesta ferramenta.
 
@@ -545,22 +551,20 @@ En definitiva, si es configura una xarxa en la sala, poder traure tot el rendime
 
 En cas contrari, es miraria la forma de combinar els 5 WordPress en un sol, fer \href{https://wpmudev.com/blog/merging-wordpress-sites/}{merge wordpress} \texttt{mirar\ que\ més\ alternatives\ hi\ ha.}
 
-`
-
-\hypertarget{implantaciuxf3-de-projectes-exelerarning}{%
-\chapter{Implantació de projectes exelerarning}\label{implantaciuxf3-de-projectes-exelerarning}}
+\hypertarget{implantaciuxf3-de-projectes-exelearning}{%
+\chapter{Implantació de projectes Exelearning}\label{implantaciuxf3-de-projectes-exelearning}}
 
 \href{https://exelearning.net/ca}{Exelearning} és una eina d'autor de codi obert per ajudar als docents en la creació i publicació de continguts web.
 
 \hypertarget{proposta-dimplantar-donar-cursos-en-la-sala-o-patrocinats-per-la-mateixa}{%
 \section{Proposta d'implantar donar cursos en la sala o patrocinats per la mateixa}\label{proposta-dimplantar-donar-cursos-en-la-sala-o-patrocinats-per-la-mateixa}}
 
-Una de les activitats de l'empresa és en l'entorn educatiu, de la realització d'obres de teatre en instituts i colegis. Una bona forma d'introduir la digitalització en les arts escèniques, seria preparar cursos introductors a l'obra que es vol representar. El professorat els poguera impartir abans de la seua representació, i anar preparant als alumnes del que van a veure, o fer cursos o jocs interactius post espectacle per reforçar el missatge que es vol transmetre.
+Una de les activitats de l'empresa és en l'entorn educatiu, de la realització d'obres de teatre en instituts i col·legis. Una bona forma d'introduir la digitalització en les arts escèniques, seria preparar cursos introductors a l'obra que es vol representar. El professorat els poguera impartir abans de la seua representació, i anar preparant als alumnes del que van a veure, o fer cursos o jocs interactius post espectacle per reforçar el missatge que es vol transmetre.
 
 \hypertarget{funcionament-dexelearning}{%
 \section{Funcionament d'exelearning}\label{funcionament-dexelearning}}
 
-Anem a \href{https://exelearning.net/ca/descarregues/}{descarregues} per obtenir el programa per a la plataforma on vulguem construir el projecte. En el següent enllaç \href{https://descargas.intef.es/cedec/exe_learning/Manuales/manual_exe26/}{\textbf{Documentació}}, tenim una explicació de com funciona i les possibilitats d'exportar el projecte siga a la nostra fulla o a espais gratuïts d'allotjament de contingut educatiu que després podem enllaçar.
+Anem a \href{https://exelearning.net/ca/descarregues/}{descàrregues} per obtenir el programa per a la plataforma on vulguem construir el projecte. En el següent enllaç \href{https://descargas.intef.es/cedec/exe_learning/Manuales/manual_exe26/}{\textbf{Documentació}}, tenim una explicació de com funciona i les possibilitats d'exportar el projecte siga a la nostra fulla o a espais gratuïts d'allotjament de contingut educatiu que després podem enllaçar.
 
 \hypertarget{llocs-on-podem-penjar-el-material-educatiu}{%
 \subsection{Llocs on podem penjar el material educatiu}\label{llocs-on-podem-penjar-el-material-educatiu}}
@@ -570,7 +574,7 @@ Anem a \href{https://exelearning.net/ca/descarregues/}{descarregues} per obtenir
 \item
   \href{https://public.bscw.de/pub/}{BSCW (Basic Support for Cooperative Work)}
 \item
-  \href{https://graasp.eu/}{Graasp} Pertany a la comunitat europea i la seua finalitat es crear i allotjar material educatiu.
+  \href{https://graasp.eu/}{Graasp} Pertany a la comunitat europea i la seua finalitat és crear i allotjar material educatiu.
 \item
   \href{http://vishub.org/}{Vish} Xarxa social educativa per la creació de recursos educatius.
 \end{itemize}
@@ -578,30 +582,30 @@ Anem a \href{https://exelearning.net/ca/descarregues/}{descarregues} per obtenir
 \hypertarget{possible-implantaciuxf3-duna-plataforma-moodle}{%
 \section{Possible implantació d'una plataforma Moodle}\label{possible-implantaciuxf3-duna-plataforma-moodle}}
 
-Si es volguera anar un poc més lluny, es podria implantar una plataforma Moodle, per donar cursos relacionats en les arts escèniques, on es colgaria material , hi ha diversos allotjaments on podem penjar el nostre Moodle a preus raonables, per fer un curs que ens interesse en un moment donat, mirar \href{https://www.hostingadvice.com/how-to/best-moodle-hosting/}{Best Moodle Allotjament Services}
+Si es volguera anar un poc més lluny, es podria implantar una plataforma Moodle, per donar cursos relacionats en les arts escèniques, on es colgaria material, hi ha diversos allotjaments on podem penjar el nostre Moodle a preus raonables, per fer un curs que ens interesse en un moment donat, mirar \href{https://www.hostingadvice.com/how-to/best-moodle-hosting/}{Best Moodle Allotjament Services}
 
 \hypertarget{desenvolupament-appweb}{%
 \chapter{Desenvolupament Appweb}\label{desenvolupament-appweb}}
 
-\emph{L'empresa vol personaltzar informes per a la seua comptabilitat i la demanda de subvencions, on es reflectiran el nombre d'obres, espectadors, gasto, i fer estadístiques de l'assistència de públic i comparar en Google analític}.
+\emph{L'empresa vol personalitzar informes per a la seua comptabilitat i la demanda de subvencions, on es reflectiran el nombre d'obres, espectadors, gasto, i fer estadístiques de l'assistència de públic i comparar en Google analític}.
 
-\hypertarget{desenvolupament-duna-app-de-gestiuxf3-dinformes-de-la-sala.}{%
-\section{Desenvolupament d'una app de gestió d'informes de la sala.}\label{desenvolupament-duna-app-de-gestiuxf3-dinformes-de-la-sala.}}
+\hypertarget{desenvolupament-duna-app-de-gestiuxf3-dinformes-de-la-sala}{%
+\section{Desenvolupament d'una app de gestió d'informes de la sala}\label{desenvolupament-duna-app-de-gestiuxf3-dinformes-de-la-sala}}
 
 \emph{Es proposa la realització d'una appweb que realitze aquestes tasque.}
 
 En principi, seria mitjançant una base de dades, on introduir els valors que recopile l'empesa, i un entorn web on es puguen fer consultes i redactar informes.
 
 \begin{quote}
-Pendent de resoldre, la conveniència o no de la utilització d'una base de dades, una SQLite o un fitxer json, ja que el nombre de dades no es massa elevat.\\
+Pendent de resoldre, la conveniència o no de la utilització d'una base de dades, una SQLite o un fitxer json, ja que el nombre de dades no és massa elevat.\\
 Investigar com es fan aquestes coses, ja que jo soc de xarxes, no de programació.
 \end{quote}
 
 L'app es colgaria en el servidor de l'empresa, perquè es puguen fer consultes des d'allí. El que implica la configuració d'un servidor en la mateixa sala, on de pas posarem un servidor de dns, un de fulles web si es vol realitzar interaccions amb el públic, optatiu un de correu, i es podria imantar també un servidor git, per fer les còpies de seguretat i seguiment de versions, dels projectes com la revista que publiquen o obres de teatre, en el cas que les vulguen crear de forma col·laborativa.
 
-Després de provar diverses alternatives, com \href{https://about.gitlab.com/}{gitlab} , \href{https://gogs.io/}{Gogs}, la millor alternativa pareix ser \href{https://gitea.io/en-us/}{Gitea}, és molt lleuger, es pot instal·lar amb una base de dades SQLite, i l'entorn web que proporciona es molt paregut al de github, i les exigències de l'empresa, no són les d'un entorn de programació.
+Després de provar diverses alternatives, com \href{https://about.gitlab.com/}{gitlab}, \href{https://gogs.io/}{Gogs}, la millor alternativa pareix ser \href{https://gitea.io/en-us/}{Gitea}, és molt lleuger, es pot instal·lar amb una base de dades SQLite, i l'entorn web que proporciona és molt paregut al de Github, i les exigències de l'empresa, no són les d'un entorn de programació.
 
-La millor opció per aquest cas és traure un compte de github de l'empesa, on es guarden els projectes.
+La millor opció per aquest cas és traure un compte de GitHub de l'empesa, on es guarden els projectes.
 
 \hypertarget{alternatives}{%
 \subsection{Alternatives}\label{alternatives}}
@@ -611,7 +615,7 @@ La millor opció per aquest cas és traure un compte de github de l'empesa, on e
 \item
   El projecte es pot realitzar en node.js, express i vue.js
 \item
-  \href{https://www.r-project.org/}{R} i \href{https://shiny.rstudio.com/}{shiny}, que pareix més fàcil, el que implica l'instal·lacio de R en el servidor, perquè ens servisca l'aplicació.
+  \href{https://www.r-project.org/}{R} i \href{https://shiny.rstudio.com/}{shiny}, que pareix més fàcil, el que implica la instal·lació de R en el servidor, perquè ens servisca l'aplicació.
 \end{itemize}
 
 \hypertarget{tasques-a-realitzar}{%
@@ -633,56 +637,56 @@ La millor opció per aquest cas és traure un compte de github de l'empesa, on e
 \hypertarget{reformulaciuxf3-de-les-estratuxe8gies-de-venda-dentrades}{%
 \section{Reformulació de les estratègies de venda d'entrades}\label{reformulaciuxf3-de-les-estratuxe8gies-de-venda-dentrades}}
 
-L'estratègia de la venda d'entrades, està gestionada per una empresa de venda de events, es planteja la possibilitat de migrar a un altra plataforma o autogestió d'aquestes.
+L'estratègia de la venda d'entrades, és gestionada per una empresa de venda d'actes, es planteja la possibilitat de migrar a una altra plataforma o autogestió d'aquestes.
 
-\hypertarget{installaciuxf3-de-pugin-de-venda-dentrades-i-tema-per-a-la-fulla-web}{%
-\section{Instal·lació de pugin de venda d'entrades i tema per a la fulla web}\label{installaciuxf3-de-pugin-de-venda-dentrades-i-tema-per-a-la-fulla-web}}
+\hypertarget{installaciuxf3-del-plugin-de-venda-dentrades-i-tema-per-a-la-fulla-web}{%
+\section{Instal·lació del plugin de venda d'entrades i tema per a la fulla web}\label{installaciuxf3-del-plugin-de-venda-dentrades-i-tema-per-a-la-fulla-web}}
 
 Es recomana d'implementació d'una solució com la que és té en aquesta fulla, on podem veure una demostració de les seues funcions.\href{https://tickera.com/demos/theater-demo/}{ticketera}
 
 En aquest plugin per a WordPress, tenim la possibilitat de configurar les nostres entrades, afegint imatge de l'obra, inclusió de codis Qr (per al wifi), implantar la compra d'entrades, amb selecció de la cadira en el pati de butaques.
 
-S'hauria de contractar els serveis de \href{https://stripe.com/en-es}{stripe} , la passerella de cobrament. el \href{https://stripe.com/en-es/pricing}{preu} es 1,4\% +25€, la configuració en WordPress és molt fàcil, i el tema i el plugin ja estan preparats.
+S'hauria de contractar els serveis de \href{https://stripe.com/en-es}{stripe}, la passerella de cobrament. El \href{https://stripe.com/en-es/pricing}{preu} és 1,4\% +0,25\,€, la configuració en WordPress és molt fàcil, i el tema i el plugin ja estan preparats.
 
-Una altra part interessant d´aquest plugin, és la possibilitat de validació d'entrades mitjançant un codi Qr, que funciona en una aplicació de mòvil, actualitzant la base de dades d'assistència real a l'acte.
+Una altra part interessant d'aquest plugin, és la possibilitat de validació d'entrades mitjançant un codi Qr, que funciona en una aplicació de movil, actualitzant la base de dades d'assistència real a l'acte.
 
 \hypertarget{tasques-a-fer}{%
 \section{Tasques a fer}\label{tasques-a-fer}}
 
-Configurar el tema de la fula web per a que tinga l'aspecte desitjat, es podria comprar també un tema que ofereixen en la mateixa ticketera dissenyat expressament per a \href{https://tickera.com/demos/theater-demo/}{teatres} i actes.
+Configurar el tema de la fula web perquè tinga l'aspecte desitjat, es podria comprar també un tema que ofereixen en la mateixa ticketera dissenyat expressament per a \href{https://tickera.com/demos/theater-demo/}{teatres} i actes.
 
 \hypertarget{configuraciuxf3-del-servidor}{%
 \chapter{Configuració del servidor}\label{configuraciuxf3-del-servidor}}
 
-Descriurerem com seria la posada en funcionament del servidor.
+Descriurem com seria la posada en funcionament del servidor.
 
-Per dur a terme aquest projecte anem a fer una simulació en una màquina virtual en un Ubuntu server que descarregarem de \href{https://ubuntu.com/download/server}{Ubuntu server}. i simularem que tenim 3 discs durs per a fer un RAID.
+Per dur a terme aquest projecte anem a fer una simulació en una màquina virtual en un Ubuntu server que descarregarem \href{https://ubuntu.com/download/server}{d'Ubuntu server}. I simularem que tenim 3 discs durs per a fer un RAID.
 
-\href{https://tonyfernandeztech.wordpress.com/2021/04/27/installing-ubuntu-20-04-with-software-raid-1/}{ubunut en raid}
+\href{https://tonyfernandeztech.wordpress.com/2021/04/27/installing-ubuntu-20-04-with-software-raid-1/}{Ubuntu en raid}
 
-Anem a fer la instal·lacio en format \href{https://en.wikipedia.org/wiki/Standard_RAID_levels}{RAID} 5, farien falta 3 discos, però ens assegurem recuperació contra fallades, es pot fer també amb raid 0 on augmenta la velocitat, però no tenim recuperació en fallides d'un disc, es perd tot.
+Anem a fer la instal·lació en format \href{https://en.wikipedia.org/wiki/Standard_RAID_levels}{RAID} 5, farien falta 3 discos, però ens assegurem recuperació contra fallades, es pot fer també amb raid 0 on augmenta la velocitat, però no tenim recuperació en fallides d'un disc, es perd tot.
 
-Hem de decidir si volem el tipus 0, on és té tot l'espai dels discs durs, i augmentem la velocitat de funcionament, o fem un 5 on l'espai d'un dels discs es perd per a fer còpia de paritat, i no és tan ràpid, pel tipus d'empresa, la velocitat punta del 0 no és necessària, i jo primaria la seguretat.
+Hem de decidir si volem el tipus 0, on es té tot l'espai dels discs durs, i augmentem la velocitat de funcionament, o fem un 5 on l'espai d'un dels discs es perd per a fer còpia de paritat, i no és tan ràpid, pel tipus d'empresa, la velocitat punta del 0 no és necessària, i jo primaria la seguretat.
 
 \emph{Recomane el tipus 5.}
 
-Hem de comprar 3 hd sata depen de la mida valdra un preu, per exemple \href{https://www.amazon.es/Blue-256MB-3-5IN-SATA-Sint/dp/B08VH8R94B/ref=sr_1_4?hvadid=79852063937015\&hvbmt=be\&hvdev=c\&hvqmt=e\&keywords=hd+2tb+interno\&qid=1650128602\&refinements=p_n_size_browse-bin\%3A10858611031\&rnid=949713031\&s=computers\&sr=1-4}{WD Blue 2TB SATA} està en amazon per 44 euros, per 3 discs, 132 euros, i tindríem una capacitat d'emmagatzemament de 4 TB en recuperació si falla un. Si no, es compren 2 per 88 i no fem un tipus 0.
+Hem de comprar 3 hd sata depen de la mida valdrà un preu, per exemple \href{https://www.amazon.es/Blue-256MB-3-5IN-SATA-Sint/dp/B08VH8R94B/ref=sr_1_4?hvadid=79852063937015\&hvbmt=be\&hvdev=c\&hvqmt=e\&keywords=hd+2tb+interno\&qid=1650128602\&refinements=p_n_size_browse-bin\%3A10858611031\&rnid=949713031\&s=computers\&sr=1-4}{WD Blue 2TB SATA} està en Amazon per 44 euros, per 3 discs, 132 euros, i tindríem una capacitat d'emmagatzemament de 4 TB en recuperació si falla un. Si no, es compren 2 per 88 i no fem un tipus 0.
 
 \begin{rmdnote}{No es el nostre cas}
 Exemple de configuració de \href{https://tonyfernandeztech.wordpress.com/2021/04/27/installing-ubuntu-20-04-with-software-raid-1/}{RAID 1} en aquest tipus es fa una còpia espill dels discs. es perd el 50\% de l'espai total per fer la còpia, no crec que interesse. \emph{No es el cas que ens interessa.}
 
 \end{rmdnote}
 
-\begin{rmdinfo}{Montar un RAID 5}
+\begin{rmdinfo}{Muntar un RAID 5}
 Aci tenim com muntar un \href{https://www.tutorialspoint.com/how-to-create-a-raid-5-storage-array-with-mdadm-on-ubuntu-16-04}{RAID 5 en Ubuntu}, ja en funcionament. Nosaltres començarem des de zero, fent una instal·lació neta.
 
 \end{rmdinfo}
 
 Mira açò, igual es millor fer un vlm i posar raid després, o formatar en \href{https://help.ubuntu.com/community/btrfs}{btrsf} \href{https://hetmanrecovery.com/recovery_news/how-to-create-software-raid-5-with-lvm.htm}{LVM+RAID}
 
-Possibilitat de no fer un RAID , fer un lvm en diversos discs i posar sistema de fitxer btrfs en compressió, encara que si el que es guarda es majoritàriament vídeos, no te massa sentit, es perd un poc de rendiment, i si el server no es massa potent, no valdria la pena, te millores en la recuperació d'erros , i em pareix millor per a un sistema en poc manteniment per al futur.
+Possibilitat de no fer un RAID , fer un lvm en diversos discs i posar sistema de fitxer btrfs en compressió, encara que si el que es guarda es majoritàriament vídeos, no te massa sentit, es perd un poc de rendiment, i si el server no es massa potent, no valdria la pena, te millores en la recuperació d'erros, i em pareix millor per a un sistema en poc manteniment per al futur.
 
-\emph{El que cal pensar ara} és, sistema en home en espai per a usuaris, o muntar en mnt/espai per a que es guarden els vídeos.
+\emph{El que cal pensar ara} és, sistema en home en espai per a usuaris, o muntar en mnt/espai perquè es guarden els vídeos.
 
 \begin{itemize}
 \tightlist
@@ -692,8 +696,8 @@ Possibilitat de no fer un RAID , fer un lvm en diversos discs i posar sistema de
   El més segur es que no ho gasten mai. L'opció de fer sol servidor de disc dur, i posar allí una carpeta perquè colguen el que es vol servir per web interna, igual seria millor opció.
 \end{itemize}
 
-\begin{rmdnote}{No es el nostre cas}
-Més que res, es pe a l'hora de fer les particions del disc dur, li donem mes a home, o posem el pes de l'espai a la partició d'espai. Clarament, les he de separar, ja que no vull que per una d'aquestes es quede cense espai i que el servidor comence anar malament o directament no funcione per falta d'espai, i més si es guarden allí les captures del streaming, que per si una d'aquestes, es queda encés, el pot deixar cense disc en poc de temps.
+\begin{rmdnote}{No és el nostre cas}
+Més que res, és pe a l'hora de fer les particions del disc dur, li donem més a home, o posem el pes de l'espai a la partició d'espai. Clarament, les he de separar, ja que no vull que per una d'aquestes es quede cense espai i que el servidor comence anar malament o directament no funcione per falta d'espai, i més si es guarden allí les captures de reproducció en línia, que per si una d'aquestes, es queda encés, el pot deixar cense disc en poc de temps.
 
 \end{rmdnote}
 
@@ -716,7 +720,7 @@ Resoldre el problema dels permisos, que grups crear, que usuaris i que pot fer q
 \item
   Configurar un servidor web, per als serveis que es poden posar.
 \item
-  La web de, es poden posar WordPress per a cada usuari, perquè facen les seues proves, o intentar convéncer de les bondats d'Hugo o Jenkyll, estudiar la seua configuració, creació d'un tema adequat per a la sala, i explicar la forma que el puguen gastar.
+  La web de, es poden posar WordPress per a cada usuari, perquè facen les seues proves, o intentar convèncer de les bondats d'Hugo o Jenkyll, estudiar la seua configuració, creació d'un tema adequat per a la sala, i explicar la forma que el puguen gastar.
 \end{itemize}
 
 \hypertarget{notes}{%
@@ -776,7 +780,7 @@ ves en cuidaoooo no se si açò tancara o continua fins el mas enllà
 \end{rmdnote}
 
 \begin{rmdinfo}{}
-\textbf{Per que no isca en el pdf}
+\textbf{Perquè no isca en el pdf}
 
 ```\{asis, echo=!knitr::is\_latex\_output()\}\\
 ::: \{.rmdcuidao\}\\
